<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <!-- Crypto Name -->
    <TextView
        android:id="@+id/cryptoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crypto_name"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textStyle="bold"
        android:textSize="18sp" />

    <!-- Crypto Symbol -->
    <TextView
        android:id="@+id/cryptoSymbol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crypto_symbol"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textSize="14sp"
        android:layout_marginTop="4dp"/>

    <!-- Crypto Price -->
    <TextView
        android:id="@+id/cryptoPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_in_usd"
        android:textAppearance="?attr/textAppearanceListItemSecondary"
        android:textSize="16sp"
        android:layout_marginTop="4dp"/>

</LinearLayout>
